--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
     "start": "node index"
   },
   "author": "Samuel Odunlade",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1",
+    "lodash": "^4.17.20"
+  }
 }
