--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "lodash": "^4.17.20",
-    "morgan": "^1.10.0"
+    "mongoose": "^5.10.2",
+    "morgan": "^1.10.0",
+    "mysql": "^2.18.1"
   }
 }
